--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "request header parser microservice",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "Merizza Khan",
   "license": "ISC",
